apps/routers/docs-https/docs-teamhephy-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: docs-teamhephy
  namespace: traefik-staging
spec:
  ports:
    - name: docs-https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
    - name: docs-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: docs-teamhephy
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.12.202
  ports:
  - port: 443
    name: docs-https
  - port: 80
    name: docs-http
