apps/routers/docs-https/docs-teamhephy-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docs-teamhephy
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`docs.teamhephy.info`)
    services:
    - kind: Service
      name: workflow-docs
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: docs-teamhephy
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`docs.teamhephy.info`)
    services:
    - name: workflow-docs
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
